[package]
name = "proxy-elev"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "prepare"
path = "src/bin/prepare.rs"

[[bin]]
name = "namerebase"
path = "src/bin/name_rebase.rs"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.35", features = ["derive"] }
codee = "0.3.0"
console_error_panic_hook = "0.1.7"
futures = "0.3.31"
image = "0.25.6"
leptos = { version = "0.7.8", features = ["csr"] }
leptos-use = "0.15.7"
nucleo-matcher = "0.3.1"
printpdf = { version = "0.8.2", features = ["webp"] }
js-sys = "0.3"
reactive_stores = "0.1.8"
regex = "1.11.1"
reqwest = { version = "0.12.15", features = ["json"] }
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
toml = "0.8.20"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Node"] }
